--- a/docs/framework/griptape.mdx
+++ b/docs/framework/griptape.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🧻 Using Composio With Griptape"
+title: "Using Composio With Griptape"
 sidebarTitle: "Griptape"
 description: "Integrate Composio with Griptape agents to let them seamlessly interact with external apps"
 ---
