feat: add connected acc ids feat docs

--- a/docs/patterns/tools/what-are-tools.mdx
+++ b/docs/patterns/tools/what-are-tools.mdx
@@ -90,6 +90,7 @@ Tools and Actions are available through different toolset classes:
 #### Basic Uscase:
 - `apiKey`: Composio API key. Get your API key [here](https://app.composio.dev/developers)
 - `entityId`: The ID of the entity to execute the action on. Defaults to **default**
+- `connectedAccountIds`: Use this to define connected accounts to use when executing an action for a specific app (e.g. `{ "gmail" : "24dc-.." }`)
 
 #### Advanced Use Case:
 - `baseUrl`: Base URL for the Composio API server
