--- a/docs/get-started/tools.mdx
+++ b/docs/get-started/tools.mdx
@@ -1,17 +1,17 @@
 ---
-title: "🚀 Quick Start - Tools"
-sidebarTitle: "Quick Start - Tools"
+title: "Tools Quickstart"
+sidebarTitle: "Tools Quickstart"
 description: "Learn how to use Tools in less than 5 minutes"
 ---
 
 ## Star A Repository on GitHub
 In this guide, we'll:
 
-1. 🔐 Connect your GitHub account with Composio
-2. 🛠 Fetch GitHub actions 
-3. 🧠 Pass these actions to an LLM
-4. ⭐ Instruct to star the `composiohq/composio` repository
-5. ✅ Execute the action
+1. Connect your GitHub account with Composio
+2. Fetch GitHub actions 
+3. Pass these actions to an LLM
+4. Instruct to star the `composiohq/composio` repository
+5. Execute the action
 
 <Tip>
 **Tools** represent a group of actions specific to an app. **Actions** are operations you can perform - like starring a repo on GitHub or creating an issue in Linear.
