--- a/docs/get-started/triggers.mdx
+++ b/docs/get-started/triggers.mdx
@@ -1,16 +1,16 @@
 ---
-title: "🚀 Quick Start - Triggers"
-sidebarTitle: "Quick Start - Triggers"
+title: "Triggers Quickstart"
+sidebarTitle: "Triggers Quickstart"
 description: "Learn how to use Triggers in less than 5 minutes"
 ---
 
 ## Listen to New Emails in Gmail
 In this guide, we'll:
 
-1. 🔐 Connect your Gmail account with Composio
-2. 🛠 Enable Triggers to listen to new emails in Gmail
-3. 🧠 Pass these triggers event payloads to an AI language model to identify bank transactions
-4. ⭐ Execute an action from Gmail tool to add **important** label to relevant emails
+1. Connect your Gmail account with Composio
+2. Enable Triggers to listen to new emails in Gmail
+3. Pass these triggers event payloads to an AI language model to identify bank transactions
+4. Execute an action from Gmail tool to add **important** label to relevant emails
 
 <Tip>
 **Tools** represent a group of actions specific to an app. **Actions** are operations you can perform - like starring a repo on GitHub or creating an issue in Linear.
