--- a/docs/faq/supported_llms/supported_llm.mdx
+++ b/docs/faq/supported_llms/supported_llm.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ What LLMs can I use?"
+title: "What LLMs can I use?"
 sidebarTitle: "Supported LLMs"
 description: "Understand more about Actions"
 ---
