--- a/docs/introduction/foundations/components/actions/local-code.mdx
+++ b/docs/introduction/foundations/components/actions/local-code.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ How to Use Custom Local Actions"
+title: "How to Use Custom Local Actions"
 sidebarTitle: "Custom Actions"
 description: "Learn how to perform local actions with a connected account."
 ---
