--- a/docs/patterns/tools/serve-tools.mdx
+++ b/docs/patterns/tools/serve-tools.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ Serving Tools Over Endpoint"
+title: "Serving Tools Over Endpoint"
 sidebarTitle: "Serving Tools Over Endpoint"
 description: "Learn how to create a REST API endpoint that processes natural language requests into tool actions using Composio, OpenAI and FastAPI"
 ---
