--- a/docs/patterns/tools/use-tools/action-guide-with-agents.mdx
+++ b/docs/patterns/tools/use-tools/action-guide-with-agents.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ How can I use Tools with LLMs?"
+title: "How can I use Tools with LLMs?"
 sidebarTitle: "Use Tools with LLMs"
 description: "Guide to using Tools with LLMs"
 ---
