--- a/docs/patterns/tools/use-tools/configure-tools.mdx
+++ b/docs/patterns/tools/use-tools/configure-tools.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ Configure Tools"
+title: "Configure Tools"
 sidebarTitle: "Configure Tools"
 description: "Learn how to configure tools"
 ---
