--- a/docs/patterns/tools/use-tools/action-guide-without-agents.mdx
+++ b/docs/patterns/tools/use-tools/action-guide-without-agents.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ How can I use Tools directly?"
+title: "How can I use Tools directly?"
 sidebarTitle: "Use Tools Directly"
 description: "Guide to use Tools directly as function calls"
 ---
@@ -8,22 +8,11 @@ description: "Guide to use Tools directly as function calls"
 
 Composio allows you to execute tools directly as function calls. When calling a tool directly, you'll need to provide the input parameters. Checkout [Get Action Schema](/patterns/tools/use-tools/get-action-inputs) to learn how to get the input parameters for an action.
 
-Install packages:
-<CodeGroup>
-```bash Python
-pip install composio-core
-```
-```bash JavaScript
-npm install composio-core
-```
-</CodeGroup>
-
-Using tools directly:
 <CodeGroup>
  ```python Python
 from composio import ComposioToolSet, Action
 
-tool_set = ComposioToolSet(entity_id="Jessica")
+tool_set = ComposioToolSet()
 
 tool_set.execute_action(
     action=Action.GITHUB_STAR_A_REPOSITORY_FOR_THE_AUTHENTICATED_USER,
@@ -33,24 +22,22 @@ tool_set.execute_action(
 ```
 
 ```javascript JavaScript
-import { OpenAIToolSet } from "composio-core";
+import { ComposioToolSet } from "composio-core";
 
-const toolset = new OpenAIToolSet();
-const entity = toolset.client.getEntity("default");
+const toolset = new ComposioToolSet();
 
-const result = await entity.execute({
-  actionName: "GITHUB_STAR_A_REPOSITORY_FOR_THE_AUTHENTICATED_USER",
-  params: {
-    owner: "composiohq",
-    repo: "composio",
-  },
+const result = await toolset.executeAction({
+    actionName: "GITHUB_STAR_A_REPOSITORY_FOR_THE_AUTHENTICATED_USER",
+    params: {
+        owner: "composiohq",
+        repo: "composio",
+    },
 });
-console.log(result);
   ```
 </CodeGroup>
 
 ### Execute Tools or Actions with Natural Language
-You can also execute Tools or Actions by passing in natural language prompts without specific parameters
+You can also execute Actions by passing in natural language prompts which will dynamically fill the parameters required for executing the action
 <CodeGroup>
 ```python Python
 tool_set.execute_action(
@@ -65,7 +52,6 @@ tool_set.execute_action(
 ```javascript JavaScript
 const result = await toolset.client.getEntity("default").execute({
     actionName: "GITHUB_STAR_A_REPOSITORY_FOR_THE_AUTHENTICATED_USER",
-    params: {},
     // Natural language prompt
     text: "Star the repo composiohq/composio"
 });
@@ -87,16 +73,13 @@ toolset.execute_action(
 )
 ```
 ```javascript JavaScript {2}
-const result = await langchainToolset.executeAction({
-    action: "create_draft",
+const result = await toolset.executeAction({
+    actionName: "create_draft",
     params:{
         thread_id: "",
         message_body: ""
-    },
-    entityId: "Jessica",
+    }
 })
-
-console.log(result);
 ```
 </CodeGroup>
 
