--- a/docs/patterns/tools/use-tools/get-action-inputs.mdx
+++ b/docs/patterns/tools/use-tools/get-action-inputs.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ How can I get the schema for an Action?"
+title: "How can I get the schema for an Action?"
 sidebarTitle: "Get Action Schema"   
 description: "Guide to get the schema for an Action"
 ---
@@ -13,17 +13,6 @@ When executing actions without agents, you'll need to provide the input paramete
 
 <Tabs>
 <Tab title="SDK">
-Install packages:
-<CodeGroup>
-```bash Python
-pip install composio-openai
-```
-```bash JavaScript
-npm install composio-core
-```
-</CodeGroup>
-
-Import libraries & get action schema:
 <CodeGroup>
  ```python Python 
 from composio import ComposioToolSet, Action
