--- a/docs/patterns/tools/use-tools/processing-actions.mdx
+++ b/docs/patterns/tools/use-tools/processing-actions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ How to modify Actions?"
+title: "How to modify Actions?"
 sidebarTitle: "Modify Actions"
 description: "Learn how to modify Tools & Actions to refine schemas, inputs, and outputs for optimal results."
 ---
