--- a/docs/patterns/tools/use-tools/use-actions-with-custom-auth.mdx
+++ b/docs/patterns/tools/use-tools/use-actions-with-custom-auth.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ How Can I Use Tools and Actions With Custom Authentication?"
+title: "How Can I Use Tools and Actions With Custom Authentication?"
 sidebarTitle: "Use Custom Auth"
 description: "Guide to use Custom Authentication With Tools And Actions"
 ---
