--- a/docs/patterns/tools/use-tools/use-tools-with-your-auth.mdx
+++ b/docs/patterns/tools/use-tools/use-tools-with-your-auth.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🛠️ How Can I Use Tools and Actions With Existing Authentication?"
+title: "How Can I Use Tools and Actions With Existing Authentication?"
 sidebarTitle: "Use Tools With Your Auth"
 description: "Guide to using existing authentication with tools and actions"
 ---
@@ -10,11 +10,6 @@ Composio allows you to [execute actions directly](action-guide-without-agents) u
 
 <Tabs>
 <Tab title="Python">
-Install packages:
-```bash
-pip install composio-core
-```
-
 Use the `add_auth` method to add the existing authentication to the toolset for the app you want to use. `in_` is where you want to add the auth, `name` is the name of the header you want to add and `value` is the value of the header.
 ```python {7-13}
 from composio import ComposioToolSet, App
@@ -39,15 +34,11 @@ toolset.execute_action(
 ```
 </Tab>
 <Tab title="JavaScript">
-Install packages:
-```bash 
-npm install composio-core
-```
-Here you need to pass the authentication parameters inside the `authConfig`. `in_` is where you want to add the auth, `name` is the name of the header you want to add and `value` is the value of the header.
+Here you need to pass the authentication parameters inside the `authConfig`. `in` is where you want to add the auth, `name` is the name of the header you want to add and `value` is the value of the header.
 ```javascript {10-14}
-import { OpenAIToolSet } from "composio-core";
+import { ComposioToolSet } from "composio-core";
 
-const toolset = new OpenAIToolSet();
+const toolset = new ComposioToolSet();
 
 const response = await toolset.client.actions.execute({
     actionName: "GITHUB_STAR_A_REPOSITORY_FOR_THE_AUTHENTICATED_USER",
